modificado codigo do site

--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <title>meu site senai</title>
 </head>
 <body>
-<h1>minhas codificaçoes</h1>       
+<h1>meu site saúde alimentar<h1>
+<p>A composição exata de uma dieta diversificada, equilibrada e saudável varia de acordo com as características individuais de cada pessoa (idade, sexo, estilo de vida e grau de atividade física), contexto cultural, alimentos disponíveis localmente e hábitos alimentares. No entanto, os princípios básicos do que constitui uma alimentação saudável permanecem os mesmos para todas e todos.
+Algumas dicas simples para manter a regularidade intestinal:
+
+    Tenha uma dieta balanceada
+    Beba bastante líquido
+    Faça exercícios físicos
+    Não Deixe de ir ao banheiro quando sentir vontade.
+    Aumentar o consumo de fibras</p>
+
+    <article>
+    <!--materia-->
+        <h1>Cuidados com alimentos</h1>
+        <img src="imagem.1.jpg">  
+        <a href="https://saude.rs.gov.br/vigilancia-sanitaria">clique aqui</a>
+    </article>
+    
+    <article>
+    <!--materia 2-->
+        <H1>alimentos saudaveis</H1>
+        <img src="imagem2.jpg">
+        <a href="http://www.cevs.rs.gov.br/alimentos">clique aqui</a>
+    </article>
+
 </body>
 </html>
