--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ Algumas dicas simples para manter a regularidade intestinal:
     Aumentar o consumo de fibras</p>
 
     <article>
-    <!--materia-->
+    <!--materia 1-->
         <h1>Cuidados com alimentos</h1>
-        <img src="imagem.1.jpg">  
+        <img src="imagem1.jpg">  
         <a href="https://saude.rs.gov.br/vigilancia-sanitaria">clique aqui</a>
     </article>
     
@@ -28,6 +28,20 @@ Algumas dicas simples para manter a regularidade intestinal:
         <H1>alimentos saudaveis</H1>
         <img src="imagem2.jpg">
         <a href="http://www.cevs.rs.gov.br/alimentos">clique aqui</a>
+    </article>
+
+    <article>
+     <!--material 3-->
+        <h1>Destaque dos Centros Colaboradores da OPAS/OMS></h1>
+        <img src="imagem3.jpg">
+        <a href="https://www.paho.org/pt/centros-colaboradores-da-opasoms/serie-em-destaque-dos-centros-colaboradores-da-opasoms">clique aqui</a>
+    </article>
+
+    <article>
+    <!--material -->
+       <h1>Aleitamento materno e alimentação complementar</h1>
+       <img src="imagem4.jpg">
+       <a href="https://www.paho.org/pt/topicos/aleitamento-materno-e-alimentacao-complementar">clique aqui</a>
     </article>
 
 </body>
