--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>meu site senai</title>
 </head>
 <body>
+
+<header>
+
+<a href="index.html">saude alimentar</a>
+<ul>
+    <li><a href="index.hmtl">home</a></li>
+    <li><a href="contato.html">contato</a></li>
+    <li><a href="noticias.html">noticias</a></li>
+</ul>
+</header>
+
 <h1>meu site saúde alimentar<h1>
 <p>A composição exata de uma dieta diversificada, equilibrada e saudável varia de acordo com as características individuais de cada pessoa (idade, sexo, estilo de vida e grau de atividade física), contexto cultural, alimentos disponíveis localmente e hábitos alimentares. No entanto, os princípios básicos do que constitui uma alimentação saudável permanecem os mesmos para todas e todos.
 Algumas dicas simples para manter a regularidade intestinal:
