--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>meu site senai</title> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>meu site senai</title>
+    <link href="estilo.css" rel="stylesheet"
 </head>
 <body>
 
 <header>
 
-<a href="index.html">saude alimentar</a>
+<nav>
+<a href="index.html">saúde alimentar</a>
 <ul>
     <li><a href="index.hmtl">home</a></li>
     <li><a href="contato.html">contato</a></li>
     <li><a href="noticias.html">noticias</a></li>
 </ul>
+</nav>
+
 </header>
 
-<h1>meu site saúde alimentar<h1>
+<h1>Meu Site Saúde Alimentar<h1>
 <p>A composição exata de uma dieta diversificada, equilibrada e saudável varia de acordo com as características individuais de cada pessoa (idade, sexo, estilo de vida e grau de atividade física), contexto cultural, alimentos disponíveis localmente e hábitos alimentares. No entanto, os princípios básicos do que constitui uma alimentação saudável permanecem os mesmos para todas e todos.
 Algumas dicas simples para manter a regularidade intestinal:
 
@@ -54,6 +58,6 @@ Algumas dicas simples para manter a regularidade intestinal:
        <img src="imagem4.jpg">
        <a href="https://www.paho.org/pt/topicos/aleitamento-materno-e-alimentacao-complementar">clique aqui</a>
     </article>
-
+<footer>fim do site "SAÚDE ALIMENTAR"</footer>
 </body>
 </html>
