--- a/noticias.html
+++ b/noticias.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>noticias</title>
+    <link href="estilo.css" rel="stylesheet">
 </head>
 <body>
-    
+<h1>Laboratório de Inovação em Alimentação e Nutrição na Atenção Primária à Saúde será lançado nesta quarta-feira, 18/10</h1>
+<img src="imagem6.jpg"> 
+<a href="index.html">pagina inicial</a>   
 </body>
 </html>
