--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>meu site senai</title> 
+    <title>meu site saúde alimentar</title> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="estilo.css" rel="stylesheet"
+    <link href="estilo.css" rel="stylesheet">
 </head>
 <body>
 
 <header>
 
 <nav>
-<a href="index.html">saúde alimentar</a>
+<a href="index.html">Saúde alimentar</a>
 <ul>
-    <li><a href="index.hmtl">home</a></li>
-    <li><a href="contato.html">contato</a></li>
-    <li><a href="noticias.html">noticias</a></li>
+    <li><a href="index.hmtl">Home</a></li>
+    <li><a href="contato.html">Contato</a></li>
+    <li><a href="noticias.html">Noticias</a></li>
 </ul>
 </nav>
 
@@ -35,29 +35,29 @@ Algumas dicas simples para manter a regularidade intestinal:
     <!--materia 1-->
         <h1>Cuidados com alimentos</h1>
         <img src="imagem1.jpg">  
-        <a href="https://saude.rs.gov.br/vigilancia-sanitaria">clique aqui</a>
+        <a href="https://saude.rs.gov.br/vigilancia-sanitaria">clique aqui!</a>
     </article>
     
     <article>
     <!--materia 2-->
         <H1>alimentos saudaveis</H1>
         <img src="imagem2.jpg">
-        <a href="http://www.cevs.rs.gov.br/alimentos">clique aqui</a>
+        <a href="http://www.cevs.rs.gov.br/alimentos">clique aqui!</a>
     </article>
 
     <article>
      <!--material 3-->
         <h1>Destaque dos Centros Colaboradores da OPAS/OMS></h1>
         <img src="imagem3.jpg">
-        <a href="https://www.paho.org/pt/centros-colaboradores-da-opasoms/serie-em-destaque-dos-centros-colaboradores-da-opasoms">clique aqui</a>
+        <a href="https://www.paho.org/pt/centros-colaboradores-da-opasoms/serie-em-destaque-dos-centros-colaboradores-da-opasoms">clique aqui!</a>
     </article>
 
     <article>
     <!--material -->
        <h1>Aleitamento materno e alimentação complementar</h1>
        <img src="imagem4.jpg">
-       <a href="https://www.paho.org/pt/topicos/aleitamento-materno-e-alimentacao-complementar">clique aqui</a>
+       <a href="https://www.paho.org/pt/topicos/aleitamento-materno-e-alimentacao-complementar">clique aqui!</a>
     </article>
-<footer>fim do site "SAÚDE ALIMENTAR"</footer>
+<footer>fim do site saúde alimentar</footer>
 </body>
 </html>
