--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<header>
+<header class="topo">
 
 <nav>
 <a href="index.html">Saúde alimentar</a>
@@ -20,6 +20,7 @@
 </nav>
 
 </header>
+<main>
 
 <h1>Meu Site Saúde Alimentar<h1>
 <p>A composição exata de uma dieta diversificada, equilibrada e saudável varia de acordo com as características individuais de cada pessoa (idade, sexo, estilo de vida e grau de atividade física), contexto cultural, alimentos disponíveis localmente e hábitos alimentares. No entanto, os princípios básicos do que constitui uma alimentação saudável permanecem os mesmos para todas e todos.
@@ -58,6 +59,9 @@ Algumas dicas simples para manter a regularidade intestinal:
        <img src="imagem4.jpg">
        <a href="https://www.paho.org/pt/topicos/aleitamento-materno-e-alimentacao-complementar">clique aqui!</a>
     </article>
-<footer>fim do site saúde alimentar</footer>
+</main>
+<footer cass="rodape">
+    <p>fim do site saúde alimentar</p>
+</footer>
 </body>
 </html>
