--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <header class="topo">
 
-<nav>
+<nav class="navegacao">
 <a href="index.html">Saúde alimentar</a>
-<ul>
+<ul class="menu">
     <li><a href="index.hmtl">Home</a></li>
     <li><a href="contato.html">Contato</a></li>
     <li><a href="noticias.html">Noticias</a></li>
@@ -32,36 +32,36 @@ Algumas dicas simples para manter a regularidade intestinal:
     Não Deixe de ir ao banheiro quando sentir vontade.
     Aumentar o consumo de fibras</p>
 
-    <article>
+    <article class="materia">
     <!--materia 1-->
         <h1>Cuidados com alimentos</h1>
         <img src="imagem1.jpg">  
-        <a href="https://saude.rs.gov.br/vigilancia-sanitaria">clique aqui!</a>
+        <a class="botao" href="https://saude.rs.gov.br/vigilancia-sanitaria">clique aqui!</a>
     </article>
     
-    <article>
+    <article class="materia">
     <!--materia 2-->
         <H1>alimentos saudaveis</H1>
         <img src="imagem2.jpg">
-        <a href="http://www.cevs.rs.gov.br/alimentos">clique aqui!</a>
+        <a class="botao" href="http://www.cevs.rs.gov.br/alimentos">clique aqui!</a>
     </article>
 
-    <article>
+    <article class="materia">
      <!--material 3-->
         <h1>Destaque dos Centros Colaboradores da OPAS/OMS></h1>
         <img src="imagem3.jpg">
-        <a href="https://www.paho.org/pt/centros-colaboradores-da-opasoms/serie-em-destaque-dos-centros-colaboradores-da-opasoms">clique aqui!</a>
+        <a class="botao" href="https://www.paho.org/pt/centros-colaboradores-da-opasoms/serie-em-destaque-dos-centros-colaboradores-da-opasoms">clique aqui!</a>
     </article>
 
-    <article>
+    <article class="materia">
     <!--material -->
        <h1>Aleitamento materno e alimentação complementar</h1>
        <img src="imagem4.jpg">
-       <a href="https://www.paho.org/pt/topicos/aleitamento-materno-e-alimentacao-complementar">clique aqui!</a>
+       <a class="botao" href="https://www.paho.org/pt/topicos/aleitamento-materno-e-alimentacao-complementar">clique aqui!</a>
     </article>
 </main>
 <footer cass="rodape">
-    <p>fim do site saúde alimentar</p>
+    <p>fim do site saúde alimentar!!</p>
 </footer>
 </body>
 </html>
