--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </header>
 <main>
 
-<h1>Meu Site Saúde Alimentar<h1>
-<p>A composição exata de uma dieta diversificada, equilibrada e saudável varia de acordo com as características individuais de cada pessoa (idade, sexo, estilo de vida e grau de atividade física), contexto cultural, alimentos disponíveis localmente e hábitos alimentares. No entanto, os princípios básicos do que constitui uma alimentação saudável permanecem os mesmos para todas e todos.
+<h1 class="titulo">Como cuidar da saúde alimentar</h1>
+<p class="texto">A composição exata de uma dieta diversificada, equilibrada e saudável varia de acordo com as características individuais de cada pessoa (idade, sexo, estilo de vida e grau de atividade física), contexto cultural, alimentos disponíveis localmente e hábitos alimentares. No entanto, os princípios básicos do que constitui uma alimentação saudável permanecem os mesmos para todas e todos.
 Algumas dicas simples para manter a regularidade intestinal:
 
     Tenha uma dieta balanceada
@@ -60,7 +60,7 @@ Algumas dicas simples para manter a regularidade intestinal:
        <a class="botao" href="https://www.paho.org/pt/topicos/aleitamento-materno-e-alimentacao-complementar">clique aqui!</a>
     </article>
 </main>
-<footer cass="rodape">
+<footer class="rodape">
     <p>fim do site saúde alimentar!!</p>
 </footer>
 </body>
