--- a/contato.html
+++ b/contato.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>meu site saúde alimentarr</title> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contato</title>
     <link href="estilo.css" rel="stylesheet">
 </head>
 <body>
- <h1>Responsabilidade do setor público:</h1>
- <img src="imagem5.jpg">
- <a href="index.html">pagina inicial</a>   
+
+<header class="topo">
+
+<nav class="navegacao">
+<a href="index.html"><img src="imagem7.jpg" alt="logo" height="100" width="100"></a>
+<ul class="menu">
+    <li><a href="index.hmtl">Home</a></li>
+    <li><a href="contato.html">Contato</a></li>
+    <li><a href="noticias.html">Noticias</a></li>
+</ul>
+</nav>
+
+</header>
+<main>
+
+<h1 class="titulo">contato</h1>
+<p class="texto">A composição exata de uma dieta diversificada, equilibrada e saudável varia de acordo com as características individuais de cada pessoa (idade, sexo, estilo de vida e grau de atividade física), contexto cultural, alimentos disponíveis localmente e hábitos alimentares. No entanto, os princípios básicos do que constitui uma alimentação saudável permanecem os mesmos para todas e todos.
+Algumas dicas simples para manter a regularidade intestinal:
+
+    Tenha uma dieta balanceada
+    Beba bastante líquido
+    Faça exercícios físicos
+    Não Deixe de ir ao banheiro quando sentir vontade.
+    Aumentar o consumo de fibras</p>
+</main>
+
+<footer class="rodape">
+<p>fim do site saúde alimentar</p>
+</footer>
 </body>
 </html>
