--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header class="topo">
 
 <nav class="navegacao">
-<a href="index.html">Saúde alimentar</a>
+<a href="index.html"><img src="imagem7.jpg" alt="logo" height="100" width="100"></a>
 <ul class="menu">
     <li><a href="index.hmtl">Home</a></li>
     <li><a href="contato.html">Contato</a></li>
@@ -31,6 +31,8 @@ Algumas dicas simples para manter a regularidade intestinal:
     Faça exercícios físicos
     Não Deixe de ir ao banheiro quando sentir vontade.
     Aumentar o consumo de fibras</p>
+
+<div class="grade">
 
     <article class="materia">
     <!--materia 1-->
@@ -59,6 +61,9 @@ Algumas dicas simples para manter a regularidade intestinal:
        <img src="imagem4.jpg">
        <a class="botao" href="https://www.paho.org/pt/topicos/aleitamento-materno-e-alimentacao-complementar">clique aqui!</a>
     </article>
+
+</div>
+
 </main>
 <footer class="rodape">
     <p>fim do site saúde alimentar!!</p>
