--- a/contato.html
+++ b/contato.html
@@ -31,6 +31,40 @@ Algumas dicas simples para manter a regularidade intestinal:
     Faça exercícios físicos
     Não Deixe de ir ao banheiro quando sentir vontade.
     Aumentar o consumo de fibras</p>
+
+    <!--corpo do formulario-->
+    <form class="contato">
+        <!--campo de formulario-->
+        <!--campo nome-->
+        <label class="rotulo">
+        Nome
+        <input type="text" class="campo">
+    </label>      
+    <!--campo Email-->
+    <label class="rotulo">
+        E-mail
+        <input type="email" class="campo">
+    </label>      
+     <!--campo Assunto-->
+     <label class="rotulo">
+        Assunto
+        <select class="campo">
+            <option>Duvidas</option>
+            <option>Sugestões</option>
+            <option>Criticas</option>
+        </select>
+    </label> 
+    
+    <!--campo mensagem-->
+    <label class="rotulo">
+        mensagem
+        <textarea class="campo"></textarea>
+    </label>
+
+    <!--botao enviar-->
+        <button class="botao">Enviar</button>
+</form>
+
 </main>
 
 <footer class="rodape">
