--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>meu site saúde alimentarr</title> 
+    <title>meu site saúde alimentar</title> 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
     <link href="estilo.css" rel="stylesheet">
 </head>
 <body>
@@ -50,7 +50,7 @@ Algumas dicas simples para manter a regularidade intestinal:
 
     <article class="materia">
      <!--material 3-->
-        <h1>Destaque dos Centros Colaboradores da OPAS/OMS></h1>
+        <h1>Destaque dos Centros Colaboradores da OPAS/OMS</h1>
         <img src="imagem3.jpg">
         <a class="botao" href="https://www.paho.org/pt/centros-colaboradores-da-opasoms/serie-em-destaque-dos-centros-colaboradores-da-opasoms">clique aqui!</a>
     </article>
